# ChangeLog for dev-python/fixtures
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/fixtures/ChangeLog,v 1.34 2015/07/23 06:24:51 prometheanfire Exp $

*fixtures-1.3.1-r1 (23 Jul 2015)

  23 Jul 2015; Matthew Thode <prometheanfire@gentoo.org>
  +fixtures-1.3.1-r1.ebuild, -fixtures-1.3.1.ebuild:
  fixing bug 555364  updated depends, tests seem to pass for me, closed test-
  request

*fixtures-1.3.1 (02 Jul 2015)

  02 Jul 2015; Patrick Lauer <patrick@gentoo.org> +fixtures-1.3.1.ebuild:
  Bump

*fixtures-1.3.0 (01 Jul 2015)

  01 Jul 2015; Patrick Lauer <patrick@gentoo.org> +fixtures-1.3.0.ebuild:
  Bump, improve deps a bit

*fixtures-1.2.0 (14 Jun 2015)

  14 Jun 2015; Ian Delaney <idella4@gentoo.org> +fixtures-1.2.0.ebuild,
  -fixtures-0.3.12-r1.ebuild, -fixtures-0.3.14-r1.ebuild,
  -fixtures-0.3.14.ebuild:
  bump reset test phase as it was intended, rm old

  09 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Updating remote-id in metadata.xml

  03 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Add pypi to remote-id in metadata.xml

  14 Apr 2015; Agostino Sarubbo <ago@gentoo.org> fixtures-0.3.14-r2.ebuild:
  Stable for ia64, wrt bug #540290

  13 Apr 2015; Agostino Sarubbo <ago@gentoo.org> fixtures-0.3.14-r2.ebuild:
  Stable for alpha, wrt bug #530600

  08 Apr 2015; Michał Górny <mgorny@gentoo.org> fixtures-0.3.12-r1.ebuild,
  fixtures-0.3.14-r1.ebuild, fixtures-0.3.14.ebuild:
  Drop old Python implementations

  09 Mar 2015; Pacho Ramos <pacho@gentoo.org> fixtures-0.3.14-r2.ebuild:
  x86 stable, bug 540290

  07 Mar 2015; Pacho Ramos <pacho@gentoo.org> fixtures-0.3.14-r2.ebuild:
  ppc stable, bug 540290

  07 Mar 2015; Pacho Ramos <pacho@gentoo.org> fixtures-0.3.14-r2.ebuild:
  ppc64 stable, bug 540290

  06 Mar 2015; Pacho Ramos <pacho@gentoo.org> fixtures-0.3.14-r2.ebuild:
  amd64 stable, bug 540290
