@@ -8,22 +8,15 @@ DIST fixtures-1.3.1.tar.gz 49741 SHA256 b63cf3bb37f83ff815456e2d0e118535ae9a4bf4
 EBUILD fixtures-0.3.14-r2.ebuild 1121 SHA256 075a4a724fa49faff7b4b477d73560ef97518366020a3227fc18447df28a1913 SHA512 23f0f8fc6a1a12f0a96b99253657921356c77b67be740dd94a9f4f7d789225f42fe800d6c42bb64374d407006409dd67f23787bb8f36a90617ac9f62f4929e06 WHIRLPOOL e8bb09b451e17cbb84a6188e8e5ed7aa3f7baa620891d1e9a271a25c245e8e078bf6974ee39dcf11c809a9adbf73f29e73e6a0c0bd8a07d0f25b3140f9f0f820
 EBUILD fixtures-1.2.0.ebuild 966 SHA256 5da819fbbced39b8e21db251d04f596e83c9478c6407036fe6ca29d3cadd3322 SHA512 be1270b217aef9a953c6b093635c5bd62b8f0e2d8ab9656a88397ab6029cceea04c68f708af930a77ca4f451925ef865d9dfe362b7e6dfbaf6ca9e9545c992f5 WHIRLPOOL 87bfc06274b01e8be097418c92318667ac079ce5c3e649ac208dec65ee0b3ab85bb9f7438445c26a0a546050ea2e20efb974dfe4d43077a6478cfc6d4242b297
 EBUILD fixtures-1.3.0.ebuild 978 SHA256 8ea6181326fb6fe3c5b8272f6ce3cc080dc7ccc6742e8d28115de90d3ae792a9 SHA512 983c0e59ad6d7bd4069b0a7713847df0353a00f8722e6fc637b10492de6b1767af01cf05809b8a568374f57844ee369136264f2e1d6640611e11cca0d9eebd12 WHIRLPOOL f3ec272f9631f0affac2b6f0c575595ef2d1b8f63a510bbefbc4da5e41b30f267c11638f89fe08813b9935616ddbe071a1264264e34d80c2b12bc8ba95ce3e8a
-EBUILD fixtures-1.3.1-r1.ebuild 1056 SHA256 79e1cc8cb64b813ce52c63b7647af6e6d1d8f7075ceb83e7fbd8543bc917edd5 SHA512 8297e07e4de6b591c29de1a0e8042bf108820fee4e7d227a183e12336131d456f4909e3969ed5c0da30488e940c872c9118503bfeca23937bca87380001887fd WHIRLPOOL 527183aa614ae94e01763300b0c606fc2f2cc98fcecc90ba6323e7c3325bd597a92550d684de5c5f566e5e659379f958ae8dc01fb750cf2230cf3a4f1f4ddd60
-MISC ChangeLog 4694 SHA256 267031a0716224cdd3231004b3968fb7f3726d69cc9249e4921fdbf86eaa9a77 SHA512 61e3c1bcb038ca315fb42f04f1baf7303a3fd56c96f551dbf11eef77dacc1c4f71025d5b0eed9d0c4d0a0604aa59ea5790e87864384e2742cb73952936ea04ea WHIRLPOOL a25cc6ed1972d194385bd5b8c8c707c04f8fec517ae057de04d9a5c926bbb82bcd51197d8e100201934f29899c368f32232fef674606e2ed1d13a9707930f25b
+EBUILD fixtures-1.3.1-r1.ebuild 1058 SHA256 b385e580f10d1c06412fe63ff496172d633a9102d0326026d9a67542d121fffa SHA512 915cae58b90c8fd4f24f1bbf80ef341f1378e0dc10692041f7f69180ff5342978cc3d7d0f6adf79033bf39e55ec493fe9bb131e1ee72a01ee08c38dee98fc952 WHIRLPOOL b13628469ea5e69cea8dbbb6d4cde7be3d9866c7a7605af64552c851a5b3e516b2ae43cef30e70eff1656fdf488b80f3764c587eef980cf75beb9da4f1dbf45d
+MISC ChangeLog 4784 SHA256 a92afb0c4e4eee8e93317d6c7114995740b721fd48aa02444e0becc306325a44 SHA512 8d061fbff8a35dac357c35c8a67d599f6052ca881545f10e86caab7482813036273d43de7e55401bbf61dd0504b8efffea01d1ba1e16340dd5c7f5d0ff393dba WHIRLPOOL c76493c176d268727e327cdfa7cabdbd0d191ce19c911288f506b60990af7d56f17f00d11ed8e32856baad0ad3945dd93780b29712ab1b5c41b65ab8e50c95a7
 MISC metadata.xml 798 SHA256 03848841859e6a9b3a57c156294e70f1a898a1fb2212e5cc0911478f4c61b8e5 SHA512 663df1e9edd8832dbb1e96a69579a47dfa12610496bd0868a55909a1599e3e0c9acd34e8e001dc5af381bc65ad721796a854cba073540492fdc65c3a9e755203 WHIRLPOOL c28378c813b684d8cd846203d3917f3b1f373d67d69d02a0eda4acb7135fed134858e7a3e70f0148cf778e88235c55edc70fd61f35fe103e169dde53293a568f
 -----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.1
 
-iQIcBAEBCAAGBQJVsIj4AAoJEGSje+quGaTobioP/RVi4mX9dAZFrWKG6s10OAnn
-JxUdRda4vT1R3pfP8ihMXyx8VAxOj8AFtaDlrazP1S7VFfuUR1loJBBABZb201aS
-vJ5/RkwKrLzNwUPlSoV+z9+dwPjhnU3hQbXxpalxR4vB1p+77R3OsTM+15+JBhBG
-JCB3yxR2VOamljaN1BpDu5oowhbiminjPZan32JJab3wneRNNabn4xcZ2gXI7Iuq
-uIO05qBvD3ZoD2ZSjyW+/VwCev7DTU5mbWxpHFvmJ+AcZGvjLL36kuToYweGMFbh
-vvfXNGwwW4zD+FCPgufRW0SjRUtay5/K1BtABxTxPXdyGwJxiR1Wp71fFLxc520Q
-UYSBOzNN1T0Q4p5IEXcuNNjJfQivE/VVsxinc++SPqmF0fDEx/Q45F14Vag3D3eE
-2bVTKxgAY0md3LOaXAQkkVDeFUdw+C1muuLZYXfxhTswVPAsvFX9G1IxsT6rdWrf
-WIjYWWLUqnzmDsSSfPWVk0bL+ULMCDmoVDTSnwtl/t9s6NzXO/xPxfWR7I1arexP
-jDIciFRkiu6/jC7/JgbGlDD9Ic9Xlcw8RdUxc70roR7HXZf2NufHmpFgjDGg+fXG
-tOwf39iwQrPDJSk2olgxaX8NPvooyac/bd+dddTuYB+UILm/HWBhBbOAsnnBuQ+I
-lbzeoYiKWhzQ0AaifyaU
-=5kVg
+iKYEAREIAGYFAlW0+idfFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
+bnBncC5maWZ0aGhvcnNlbWFuLm5ldDdDQUM1OUY0ODkzMERBREU1NUQ1RjJBRkIy
+OEVDMjEzQjgwNzJCMEQACgkQso7CE7gHKw2+dQCgrqLwiQoeSZ6yCbfcOwWn0sK8
+2pYAnifTwEDFbSawcXsG3327oPsS0zvx
+=Z8w2
 -----END PGP SIGNATURE-----
