@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/fixtures
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/fixtures/ChangeLog,v 1.34 2015/07/23 06:24:51 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/fixtures/ChangeLog,v 1.35 2015/07/26 15:17:58 idella4 Exp $
+
+  26 Jul 2015; Ian Delaney <idella4@gentoo.org> fixtures-1.3.1-r1.ebuild:
+  re-add pypy support
 
 *fixtures-1.3.1-r1 (23 Jul 2015)
 
